<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.muenchen</groupId>
	<artifactId>wollmux-core</artifactId>
	<version>18.1.4-SNAPSHOT</version>
	<name>WollMux Core Classes</name>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<libreoffice.version>5.2.7</libreoffice.version>
	</properties>

	<scm>
		<developerConnection>scm:git:https://github.com/WollMux/wollmux-core.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<distributionManagement>
		<repository>
			<id>release</id>
			<name>kvm-javabuild-release</name>
			<url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-release-local</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>kvm-javabuild-snapshots</name>
			<url>http://kvm-javabuild.tvc.muenchen.de/artifactory/libs-snapshot-local</url>
		</snapshotRepository>
	</distributionManagement>

	<build>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<compilerVersion>1.8</compilerVersion>
					<source>1.8</source>
					<target>1.8</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>2.4</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<failOnError>false</failOnError>
				</configuration>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>
			<plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.20.1</version>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<dependency>
			<groupId>org.libreoffice</groupId>
			<artifactId>ridl</artifactId>
			<version>${libreoffice.version}</version>
		</dependency>
		<dependency>
			<groupId>org.libreoffice</groupId>
			<artifactId>juh</artifactId>
			<version>${libreoffice.version}</version>
		</dependency>
		<dependency>
			<groupId>org.libreoffice</groupId>
			<artifactId>jurt</artifactId>
			<version>${libreoffice.version}</version>
		</dependency>
		<dependency>
			<groupId>org.libreoffice</groupId>
			<artifactId>unoil</artifactId>
			<version>${libreoffice.version}</version>
		</dependency>
		<dependency>
			<groupId>de.muenchen</groupId>
			<artifactId>unohelper</artifactId>
			<version>2.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-log4j12</artifactId>
			<version>1.7.23</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.2.9</version>
			<scope>test</scope>
		</dependency>
	</dependencies>
	
	<profiles>
		<profile>
      <id>OfficeTests</id>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.20.1</version>
            <configuration>
              <additionalClasspathElements>
                <additionalClasspathElement>${env.UNO_PATH}/classes/java_uno.jar</additionalClasspathElement>
                <additionalClasspathElement>${env.UNO_PATH}/classes/juh.jar</additionalClasspathElement>
                <additionalClasspathElement>${env.UNO_PATH}/classes/jurt.jar</additionalClasspathElement>
                <additionalClasspathElement>${env.UNO_PATH}/classes/ridl.jar</additionalClasspathElement>
                <additionalClasspathElement>${env.UNO_PATH}/classes/unoil.jar</additionalClasspathElement>
                <additionalClasspathElement>${env.UNO_PATH}/classes/unoloader.jar</additionalClasspathElement>
              </additionalClasspathElements>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <id>SkipOfficeTests</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <configuration>
              <excludedGroups>de.muenchen.allg.itd51.wollmux.core.OfficeTests</excludedGroups>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
